# PFAS-AI

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  Makefile.backup  README.md  add_annotation_urls.py  convert_sheets.py  extend_datasets.py  extend_genes.py  extend_lanthanide_data.py  extend_pathways.py  extend_publications.py  extend_structures.py  pyproject.toml  test_annotation_urls.py
data/: linkml_database.yaml
data/kgm/: README.md  kg-microbe_nodes.tsv
data/plan/: BER CMM AI Project Map.xlsx
data/proposal/: BER CMM Pilot Proposal-revised .docx  proposal.txt
data/publications/: 1-s2.0-S0045653514001635-main.md  1-s2.0-S0048969724031437-main.md  1-s2.0-S0048969724069584-main.md  1-s2.0-S0048969724085061-main.md  1-s2.0-S0304389423025013-main.md  1-s2.0-S030438942403005X-main.md  1-s2.0-S0304389425027992-main.md  1-s2.0-S095816692400106X-main.md  1-s2.0-S1878614625000522-main.md  1-s2.0-S3051059725000028-main.md  2025.09.19.677392v1.full.md  Biotransformation_of_perfluorooctanoic_acid_by_a_n.md  Defluorination of per- and polyfluoroalkyl carboxylic acids  PFCAs  by wood decomposer fungi.md  PMC11777429.md  PMC7473499.md  (+24 more)
schema/: README.md  lanthanide_bioprocessing.yaml  pfas_biodegradation.yaml
scripts/: merge_duplicate_sheets.py  merge_reaction_categories.py
src/: __init__.py  add_annotation_urls.py  add_missing_organisms.py  add_source_column.py  annotate_kg_identifiers.py  assay_search.py  check_publication_pdfs.py  chemical_search.py  cleanup_failed_pdfs.py  cli.py  compare_excel_files.py  compare_excel_tsv.py  convert_reactions_excel.py  convert_sheets.py  crosslink_sheets.py  dataset_search.py  download_pdfs_from_publications.py  extend_by_publication.py  extend_datasets.py  extend_genes.py  extend_lanthanide_data.py  extend_media.py  extend_pathways.py  extend_pfas_data.py  extend_publications.py  extend_reactions.py  extend_reactions_by_category.py  extend_strains.py  extend_structures.py  extend_transcriptomics.py  extend_uniprot.py  extract_from_documents.py  fix_chemical_ids.py  fix_validation_issues.py  gene_search.py  generate_missing_pdfs_report.py  kg_mining_utils.py  kg_update_chemicals.py  kg_update_genes.py  kg_update_genomes.py  (+20 more)
(+101 files in other folders)
