[project]
name = "cmm-ai"
version = "0.1.0"
description = "AI tools for lanthanide bioprocessing research"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "python-docx>=0.8.0",
    "PyPDF2>=3.0.0",
    "biopython>=1.80",
    "requests>=2.28.0",
]

[project.scripts]
cmm-parse = "src.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "--doctest-modules --doctest-continue-on-failure"