[project]
name = "pfas-ai"
version = "0.1.0"
description = "ML-enabled data pipeline for PFAS biodegradation research"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "python-docx>=0.8.0",
    "PyPDF2>=3.0.0",
    "pymupdf>=1.23.0",
    "biopython>=1.80",
    "requests>=2.28.0",
    "linkml-runtime>=1.7.0",
    "linkml>=1.7.0",
    "duckdb>=0.9.0",
]

[project.scripts]
pfas-parse = "src.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "--doctest-modules --doctest-continue-on-failure"